--- a/contentScript.css
+++ b/contentScript.css
@@ -16,6 +16,7 @@
 
 /* Popup container - can be anything you want */
 .targetText {
+    pointer-events: none;
     position: relative;
     display: inline-block;
     cursor: pointer;
@@ -30,6 +31,7 @@
 
 /* The actual popup */
 .targetText .popuptext {
+    pointer-events: none;
     visibility: visible;
     width: 400px;
     background-color: #555;
@@ -75,6 +77,9 @@
 }
 
 .yesButton {
+    -webkit-transition-duration:0.4s;
+    transition-duration: 0.4s;
+    pointer-events: auto;
     background-color: #5cb85c; /* Green */
     border: none;
     color: white;
@@ -85,10 +90,25 @@
     font-size: 16px;
 }
 
+.yesButton:hover {
+    cursor:pointer;
+    background-color: white;
+    color: green;
+}
+
+.noButton:hover {
+    cursor:pointer;
+    background-color: white;
+    color: red;
+}
+
 .noButton {
+    -webkit-transition-duration:0.4s;
+    transition-duration: 0.4s;
+    pointer-events: auto;
     background-color: #d9534f; /* Green */
     border: none;
-    color: white;
+    color: white; 
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
