--- a/contentScript.css
+++ b/contentScript.css
@@ -2,7 +2,7 @@
     background: black !important;
 } */
 
-.overlay {
+.overlayjpext {
     background:rgba(0,0,0,0.9);
     display:none;
     width:100%; height:100%;
